<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ControlRfidService">

    <TextView
        android:id="@+id/TextRfid"
        android:layout_width="380dp"
        android:layout_height="454dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:text="TextRfid"
        android:textColor="@color/Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/DeviceStatusHeader"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/TextDevice"
        android:textColor="@color/Header1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/DeviceStatus"
        android:layout_width="270dp"
        android:layout_height="25dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="12dp"
        android:text="@string/TextDevice"
        android:textColor="@color/Text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/Disconnect"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@color/ButtonBackground"
        android:onClick="onButtonDisconnectClick"
        android:text="@string/ButtonDisconnectText"
        android:textColor="@color/ButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Connect" />

    <Button
        android:id="@+id/Connect"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@color/ButtonBackground"
        android:onClick="onButtonConnectClick"
        android:text="@string/ButtonConnectText"
        android:textColor="@color/ButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeviceStatusHeader" />

    <Button
        android:id="@+id/StopService"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@color/ButtonBackground"
        android:onClick="onButtonStopServiceClick"
        android:text="@string/ButtonStopServiceText"
        android:textColor="@color/ButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StartService"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="@color/ButtonBackground"
        android:onClick="onButtonStartServiceClick"
        android:text="@string/ButtonStartServiceText"
        android:textColor="@color/ButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="112dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <TextView
        android:id="@+id/ServiceStatusHeader"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/TextService"
        android:textColor="@color/Header1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ServiceStatus"
        android:layout_width="270dp"
        android:layout_height="25dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:text="@string/TextService"
        android:textColor="@color/Text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/GetInfo"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/ButtonBackground"
        android:onClick="onButtonGetInfoClick"
        android:text="@string/ButtonGetInfoText"
        android:textColor="@color/ButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeviceStatusHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>